<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1"
              android:focusableInTouchMode="true"
              android:focusable="true"
              android:background="@drawable/activity_background">
    <include layout="@layout/header"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login_tv_username"
                android:id="@+id/textView"
                android:textColor="#FFF"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_username"
                android:singleLine="true"
                android:textColor="#FFF"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/login_tv_password"
                android:id="@+id/textView3"
                android:textColor="#FFF"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:id="@+id/et_password"
                android:textColor="#FFF"
                android:singleLine="true"
                />
        </LinearLayout>
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login_bt_login"
            android:id="@+id/bt_login"
            android:layout_marginTop="25dp"
            android:layout_gravity="center_horizontal"
            android:background="#FFF"
            android:textColor="#106ec0"
            android:textSize="25sp"
            android:textAllCaps="true"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_remind_sync1"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:id="@+id/tv_remind1"
            android:textColor="#FFF"
            android:visibility="gone"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_tv_remind_sync2"
            android:textSize="15sp"
            android:gravity="center_horizontal"
            android:id="@+id/tv_remind2"
            android:textColor="#FFF"
            android:visibility="gone"/>
        <Button android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login_bt_data_sync"
            android:id="@+id/bt_data_sync"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="#FFF"
            android:textColor="#106ec0"
            android:textSize="25sp"
            android:textAllCaps="true"/>
        <Button android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/login_bt_guest"
            android:id="@+id/bt_login_guest"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="25dp"
            android:background="#FFF"
            android:textColor="#106ec0"
            android:textSize="18sp"
            android:textAllCaps="true"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_tv_last_sync_time"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFF"
                android:visibility="gone"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tv_last_synced_time"
                android:text="@string/login_tv_not_sync_with_data"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFF"
                android:visibility="gone"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>