<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">
    <include layout="@layout/header_bar"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rl_tv_rl_for"
            android:layout_gravity="center"
            android:id="@+id/textView12"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rl_tv_project_name"
            android:layout_gravity="center"
            android:id="@+id/tv_project_name"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center_horizontal"
                  android:focusable="true"
                  android:focusableInTouchMode="true"
                  android:layout_marginStart="10dp"
                  android:layout_marginEnd="10dp">
        <EditText android:layout_width="160dp"
                  android:layout_height="wrap_content"
                  android:id="@+id/et_search"
                  android:singleLine="true"
                  android:hint="@string/rl_et_hint_report_name"/>
        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rl_bt_search"
                android:id="@+id/bt_search"
                android:singleLine="true"/>
    </LinearLayout>
    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:weightSum="1"
                  android:layout_marginStart="10dp"
                  android:layout_marginEnd="10dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
                <TextView
                    android:layout_width="65dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rl_tv_status"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="55dp"
                    android:id="@+id/tv_status"
                    android:gravity="center"/>
                <TextView
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rl_tv_title"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/tv_status"
                    android:maxWidth="200dp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/tv_title"
                    android:gravity="center"
                    android:visibility="gone"
                    />
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rl_tv_created_time"
                    android:textSize="15sp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="110dp"
                    android:gravity="center"/>

        </RelativeLayout>
        <ListView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:id="@+id/lv_report"/>
    </LinearLayout>
</LinearLayout>