<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pl_content_tv_project_name"
        android:id="@+id/tv_project_name"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:maxWidth="190dp"
        android:padding="10dp"/>
    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/pl_content_bt_create"
        android:id="@+id/bt_create"
        android:layout_toLeftOf="@+id/bt_edit"
        android:layout_centerInParent="true"
        android:background="#1777bf"
        android:textColor="#FFF"
        android:layout_margin="5dp"/>
    <Button
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:text="@string/pl_content_bt_edit"
        android:id="@+id/bt_edit"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="true"
        android:background="#4ab6b6"
        android:textColor="#FFF"
        android:layout_margin="5dp"/>
</RelativeLayout>