<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1">
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="23dp"
                    android:id="@+id/tracker_fragment_take_photo_button"
                    android:text="@string/tracker_fragment_take_photo_button"
                    android:textSize="18sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="23dp"
                    android:id="@+id/tracker_fragment_pause_button"
                    android:text="@string/tracker_fragment_pause_button"
                    android:textSize="17sp"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="23dp"
                    android:id="@+id/tracker_fragment_start_button"
                    android:text="@string/tracker_fragment_start_button"
                    android:textSize="18sp" />
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_margin="23dp"
                    android:id="@+id/tracker_fragment_save_button"
                    android:text="@string/tracker_fragment_save_button"
                    android:textSize="18sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/tracker_fragment_left_time_text"
                    android:text="@string/tracker_fragment_left_time_text"
                    android:textSize="18sp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:id="@+id/tracker_fragment_count_down_timer" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/tracker_fragment_keep_app_text"
                    android:visibility="gone"
                    android:text="@string/tracker_fragment_keep_app_text"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            >
            <org.osmdroid.views.MapView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/tracker_fragment_tracker_map_view">
            </org.osmdroid.views.MapView>
        </LinearLayout>
    </LinearLayout>
</layout>