<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:focusableInTouchMode="true"
              android:focusable="true">
    <include layout="@layout/header_bar"/>
    <Button
        android:layout_width="220dp"
        android:layout_height="35dp"
        android:text="@string/pl_content_bt_create_new_project"
        android:id="@+id/bt_create_new_project"
        android:layout_gravity="center_horizontal"
        android:padding="5dip"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:textColor="#FFF"
        android:background="#106ec0"
        android:textSize="15sp"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <AutoCompleteTextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:id="@+id/actv_search"
            android:hint="@string/pl_et_hint_project_name"
            android:singleLine="true"
            android:textSize="14sp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl_bt_search"
            android:id="@+id/bt_search"
            android:singleLine="true"/>
    </LinearLayout>

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pl_tv_project_name"
            android:id="@+id/textView9"
            android:textSize="20sp"
            android:layout_alignParentStart="true"/>
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/lv_report"
            android:layout_below="@+id/textView9"
            android:layout_marginTop="5dp" />
    </RelativeLayout>
</LinearLayout>