<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/activity_background">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp">
        <Button
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:paddingLeft="20dip"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/create_60x60"
            android:textColor="#00324f"
            android:background="#FFF"
            android:text="@string/main_bt_create"
            android:id="@+id/bt_new"
            />
        <Button
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:paddingLeft="20dip"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:textColor="#00324f"
            android:background="#FFF"
            android:text="@string/main_bt_tracker"
            android:drawableStart="@drawable/create_60x60"
            android:id="@+id/bt_tracker"
            />
        <Button
            android:layout_width="330dp"
            android:layout_height="100dp"
            android:layout_marginTop="30dp"
            android:textSize="20sp"
            android:layout_gravity="center_horizontal"
            android:gravity="center_vertical"
            android:drawableStart="@drawable/submit_60x60"
            android:paddingLeft="20dip"
            android:textColor="#00324f"
            android:background="#FFF"
            android:text="@string/main_bt_submit"
            android:id="@+id/bt_submit"
            />
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/main_bt_logout"
            android:id="@+id/bt_logout"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="70dp"
            android:textSize="20sp"
            android:textAllCaps="true"
            android:background="#FFF"
            android:textColor="#106ec0"
            />
    </LinearLayout>
</LinearLayout>